<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">One</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">"手机号码或昵称"</string>
    <string name="password">输入密码</string>
    <string name="login">登 录</string>
    <string name="register_new">新用户注册</string>
   	<string name="register">注册</string>
   	<string name="phonenumber">请输入手机号码</string>
   	<string name="test">请输入验证码</string>
   	<string name="nextstep">下一步</string>

</resources>
